Closed Bug 1671697 Opened 4 years ago Closed 4 years ago

Crash in [@ nsDocShell::InternalLoad]

Categories

(Core :: DOM: Navigation, defect, P1)

defect

Tracking

()

RESOLVED FIXED
84 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox82 --- wontfix
firefox83 --- wontfix
firefox84 --- fixed

People

(Reporter: u608768, Assigned: smaug)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/9f5cbb25-72be-43e9-9905-f8f420201015

MOZ_CRASH Reason: MOZ_DIAGNOSTIC_ASSERT(false) (NS_SUCCEEDED(mBrowsingContext->SetHistoryID(historyID)))

Top 10 frames of crashing thread:

0 XUL nsDocShell::InternalLoad docshell/base/nsDocShell.cpp:9341
1 XUL nsDocShell::LoadHistoryEntry docshell/base/nsDocShell.cpp:11725
2 XUL nsDocShell::LoadHistoryEntry docshell/base/nsDocShell.cpp:11649
3 XUL nsDocShell::Reload docshell/base/nsDocShell.cpp:4034
4 XUL mozilla::dom::Location::Reload dom/base/Location.cpp:583
5 XUL mozilla::dom::Location_Binding::reload dom/bindings/LocationBinding.cpp:1143
6 XUL bool mozilla::dom::binding_detail::GenericMethod<mozilla::dom::binding_detail::MaybeCrossOriginObjectThisPolicy, mozilla::dom::binding_detail::ThrowExceptions> dom/bindings/BindingUtils.cpp:3229
7 XUL js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:598
8 XUL Interpret js/src/vm/Interpreter.cpp:3335
9 XUL js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:635

Line was last touched in bug 1666326, but we have a number of crashes from before then.

OS: macOS → Unspecified

I can't see how that assertion could be right. We run scripts in the method before that line is executed, so the browsing context could very well be going away.

Assignee: nobody → bugs
Regressed by: 1613431
Has Regression Range: --- → yes
Severity: -- → S1
Status: NEW → ASSIGNED
Priority: -- → P1

dropping the severity to be more closely aligned with the description of S1 being a catastrophic dot release driver. Please update if I got this wrong.

Pushed by opettay@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/f24964c3a231
Crash in [@ nsDocShell::InternalLoad], r=peterv
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch

Is this something we should consider for Beta uplift?

Flags: needinfo?(bugs)

Yes.
Sorry, was on vacation. Is it too late for beta?

Flags: needinfo?(bugs) → needinfo?(ryanvm)

Yes

Flags: needinfo?(ryanvm)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: