Bug 1671697 - Crash in [@ nsDocShell::InternalLoad], r=peterv

Differential Revision: https://phabricator.services.mozilla.com/D93929